--- a/frontend/src/style/components/layout/_navbar.scss
+++ b/frontend/src/style/components/layout/_navbar.scss
@@ -12,19 +12,29 @@
     min-width: 1200px;
     width: 100%;
     z-index: 900;
-    transition:
-        color 0.5s ease 1s,
-        transform 0.8s ease-in-out, background-color 0.3s ease-in-out, padding 0.3s ease-in-out;
+    transform: translate(0);
 
     @include tablet {
-        opacity: 0;
         transform: translateX(-100%);
+        opacity: 1;
+        display: flex;
+        height: 100vh;
+        width: 100%;
+        color: $white;
+        background-color: $darkLight;
+        position: fixed;
+        z-index: 998;
+        flex-direction: column;
+        margin: 0;
+        min-width: 0;
     }
 
     &.navbar_background {
-        background: $blueBg;
-        box-shadow: 0 5px 20px 5px rgba(0,0,0,.25);
-        padding: 5px;
+        @include desktop {
+            background: $blueBg;
+            box-shadow: 0 5px 20px 5px rgba(0, 0, 0, .25);
+            padding: 5px;
+        }
     }
 
     .navbar_logo img {
@@ -40,9 +50,49 @@
         }
     }
 
+    // Only in tablet and mobile size
+    .navbar_media {
+        @include desktop {
+            display: none;
+        }
+
+        padding-bottom: 100px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
     .navbar_list {
         display: flex;
         margin-right: 300px;
+
+        li {
+            counter-increment: a;
+
+            &.hovered a {
+                text-shadow: 0 0 1px #fff;
+            }
+
+            &.not-hovered a {
+                color: #bebebe;
+            }
+
+            @include tablet {
+                margin: 40px 0;
+            }
+
+            a {
+                position: relative;
+                display: inline-block;
+                margin: 0 20px;
+                font-family: $fontRobotoMono;
+                font-weight: 300;
+                color: white;
+                letter-spacing: -1px;
+                text-decoration: none;
+                transition: color 0.2s;
+            }
+        }
 
         @include tablet {
             position: fixed;
@@ -58,26 +108,6 @@
         }
     }
 
-    .navbar_list li {
-        counter-increment: a;
-
-        @include tablet {
-            margin: 40px 0;
-        }
-    }
-
-    .navbar_list li a {
-        position: relative;
-        display: inline-block;
-        margin: 0 20px;
-        font-family: $fontRobotoMono;
-        font-weight: 300;
-        color: $white;
-        letter-spacing: -1px;
-        text-decoration: none;
-        transition: color 0.5s 0.5s;
-    }
-
     .navbar_list li a::before {
         content: '0' counter(a);
         position: absolute;
@@ -89,23 +119,6 @@
 
     @include tablet {
         flex-direction: column;
-    }
-}
-
-.navbarComponent.navbar_active {
-    @include tablet {
-        opacity: 1;
-        display: flex;
-        transform: translateX(0);
-        height: 100vh;
-        width: 100%;
-        color: $white;
-        background-color: $darkLight;
-        position: fixed;
-        z-index: 998;
-        flex-direction: column;
-        margin: 0;
-        min-width: 0;
     }
 }
 
