--- a/frontend/src/style/pages/_admin_login.scss
+++ b/frontend/src/style/pages/_admin_login.scss
@@ -24,6 +24,7 @@
 
         .admin_login_logo {
             @include illuminated_logo;
+            cursor: pointer;
         }
 
         .admin_login_form_field {
