--- a/frontend/src/style/components/home/_skills.scss
+++ b/frontend/src/style/components/home/_skills.scss
@@ -10,6 +10,10 @@
     align-items: center;
     justify-content: center;
 
+    @include mobile {
+        height: auto;
+    }
+
     .skills_title {
         position: relative;
         display: flex;
