--- a/frontend/src/style/components/layout/_navbar.scss
+++ b/frontend/src/style/components/layout/_navbar.scss
@@ -48,6 +48,10 @@
             width: 50px;
             margin-left: 0;
         }
+
+        @include mobile {
+            width: 40px;
+        }
     }
 
     // Only in tablet and mobile size
@@ -56,10 +60,14 @@
             display: none;
         }
 
-        padding-bottom: 100px;
+        padding-bottom: 80px;
         display: flex;
         align-items: center;
         gap: 10px;
+
+        img {
+           width: 30px; 
+        }
     }
 
     .navbar_list {
