--- a/frontend/src/style/components/layout/_navbar.scss
+++ b/frontend/src/style/components/layout/_navbar.scss
@@ -30,9 +30,11 @@
     }
 
     &.navbar_background {
+        transition: all 0.3s ease-in-out;
+        
         @include desktop {
             background: $blueBg;
-            box-shadow: 0 5px 20px 5px rgba(0, 0, 0, .25);
+            box-shadow: 0 5px 20px 5px rgba(0, 0, 0, 0.25);
             padding: 5px;
         }
     }
@@ -66,7 +68,7 @@
         gap: 10px;
 
         img {
-           width: 30px; 
+            width: 30px;
         }
     }
 
