Added animations to skills section

--- a/frontend/src/style/components/home/_about.scss
+++ b/frontend/src/style/components/home/_about.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    overflow: hidden;
 
     & .about_title {
         position: relative;
