Background of about section and skills section fixed

--- a/frontend/src/style/components/home/_about.scss
+++ b/frontend/src/style/components/home/_about.scss
@@ -1,6 +1,6 @@
 .about_container {
     height: auto;
-    background-image: url("../../../../assets/images/bgGlowAbout.png");
+    background-image: url("../../assets/images/bgGlowAbout.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
