--- a/frontend/src/style/components/home/_skills.scss
+++ b/frontend/src/style/components/home/_skills.scss
@@ -1,6 +1,6 @@
 .skills_container {
     height: 100vh;
-    background-image: url('../../../assets/images/skills_background.jpg');
+    background-image: url('../../assets/images/skills_background.jpg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
