Input font fixed

--- a/frontend/src/style/components/home/_contact.scss
+++ b/frontend/src/style/components/home/_contact.scss
@@ -48,6 +48,11 @@
             background-color: #1f2631;
             font-weight: 300;
             color: #ffffff;
+            font-family: $fontKanit;
+
+            &::placeholder {
+              font-family: $fontKanit;
+            }
           }
         }
       }
