Input box shadow added

--- a/frontend/src/style/components/home/_contact.scss
+++ b/frontend/src/style/components/home/_contact.scss
@@ -49,6 +49,7 @@
             font-weight: 300;
             color: #ffffff;
             font-family: $fontKanit;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
             &::placeholder {
               font-family: $fontKanit;
@@ -72,6 +73,7 @@
           height: 150px;
           font-family: $fontKanit;
           resize: none;
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         }
       }
 
