✨ (frontend, backend): New role added in skills

--- a/frontend/src/style/components/admin/_skills.scss
+++ b/frontend/src/style/components/admin/_skills.scss
@@ -35,6 +35,10 @@
             }
         }
 
+        .skills_select_role {
+            margin-top: 50px;
+        }
+
         .skills_informations {
             display: flex;
             margin: 70px auto;
