--- a/frontend/src/style/components/admin/_skills.scss
+++ b/frontend/src/style/components/admin/_skills.scss
@@ -2,6 +2,7 @@
     @include container;
     background-color: $darkLight;
     min-height: 100vh;
+    padding-bottom: 125px;
 
     .skills_title {
         margin: 50px auto 75px auto;
@@ -112,7 +113,7 @@
         }
 
         .skills_items {
-            height: 300px;
+            height: 600px;
             border-top: 2px solid #1a1d1f;
             border-bottom: 2px solid #1a1d1f;
 
