--- a/frontend/src/style/components/home/_skills.scss
+++ b/frontend/src/style/components/home/_skills.scss
@@ -31,15 +31,21 @@
     }
 
     .skills_main {
-        background-color: #070708;
+        background-color: #070708ef;
         height: auto;
         width: auto;
+        padding: 0 50px;
+        max-width: 700px;
         margin: 0 10%;
         border-radius: 10px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         color: #fff;
+
+        @include mobile {
+            padding: 0 5px;
+        }
 
         hr {
             width: 75%;
@@ -60,6 +66,7 @@
             .skills_list {
                 display: flex;
                 justify-content: center;
+                flex-wrap: wrap;
             }
 
             h3 {
